inclusão de validação dos perfis

--- a/src/app/pages/ncs/about/about.component.html
+++ b/src/app/pages/ncs/about/about.component.html
@@ -9,12 +9,12 @@
             <app-view-nc></app-view-nc>
         </div>
     </p-tabPanel>
-    <p-tabPanel [header]="'about.proposal'| translate" leftIcon="bi bi-tools" >
+    <p-tabPanel [disabled]="this.roleService.checkRoleProposal(this.aboutSrvc?.nc?.sector?.responsible_email)" [header]="'about.proposal'| translate" leftIcon="bi bi-tools" >
         <div class="content-box">
             <app-proposal></app-proposal>
         </div>
     </p-tabPanel>
-    <p-tabPanel [header]="'about.costs'| translate" leftIcon="bi bi-coin">
+    <p-tabPanel [disabled]="this.roleService.checkRoleCost()" [header]="'about.costs'| translate" leftIcon="bi bi-coin">
         <div class="content-box">
             <app-costs></app-costs>
         </div>
@@ -25,7 +25,7 @@
             <app-sgq-evaluation></app-sgq-evaluation>
         </div>
     </p-tabPanel>
-    <p-tabPanel [header]="'about.closing'| translate" leftIcon="bi bi-folder-check">
+    <p-tabPanel [disabled]="this.roleService.checkRoleClose()" [header]="'about.closing'| translate" leftIcon="bi bi-folder-check">
         <div class="content-box">
             <app-closing></app-closing>
         </div>
