--- a/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point.component.html
+++ b/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <div class="mt-3 reject-point">
+  <div class="reject-point">
     
     <app-rejection-point-items></app-rejection-point-items>
   </div>
