--- a/src/app/pages/ncs/create-prop/steps/step4/notification.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step4/notification.component.html
@@ -16,7 +16,7 @@
 </div>
 
 <div class="card">
-  <p-table [value]="contactsCopy">
+  <p-table [value]="propService.contacts">
     <ng-template pTemplate="header">
       <tr>
         <th>{{'global.contacts.name'| translate}}</th>
