--- a/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
+++ b/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
@@ -134,7 +134,7 @@
 </div>
 
 <div class="div-ident-parceiro pr-4 pb-0 " *ngIf="hasSelected()">
-  <div class="dados-parceiro razao-social py-0 py-1">
+  <div class="dados-parceiro razao-social py-1">
     <div *ngIf="!isInterno()" class="d-flex justify-content-between">
     <h1 >{{'newNC.step1.partner.corporateName'| translate}}</h1>
       <p-chip [label]="nonComplicanceService.nc.partner.code" icon="bi bi-ticket-perforated"></p-chip>
@@ -160,7 +160,7 @@
           <i class="pi pi-pencil"></i>{{'global.contacts.edit'| translate}}
         </button>
       </div>
-      <div class="d-flex justify-content-evenly">
+      <div class="d-flex justify-content-evenly mb-1">
         <div class="contato-info d-flex flex-row">
           <i class="pi pi-user"></i>
           <div>
