--- a/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint-items/checkpoint-items.component.html
+++ b/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint-items/checkpoint-items.component.html
@@ -24,7 +24,7 @@
 
 
 
-<div class="input-box mt-3" *ngIf="returnPrScreen() || returnNfScreen()">
+<div class="input-box mt-3" *ngIf="returnNfScreen()">
   <label class="mb-2 mt-3">{{'global.fileInput.title2'| translate}} </label>
   <div class="div-attachment">
     <h1>{{'global.fileInput.subtitle'| translate}}</h1>
@@ -51,6 +51,95 @@
         type="button"
         (click)="clearFileName('pontoControle')"
         class="btn btn-light"
+      >
+        <i class="pi pi-replay"></i>
+      </button>
+      <p *ngFor="let files of returnFiles('pontoControle')">
+        {{ files.name }}
+      </p>
+    </div>
+  </div>
+</div>
+<div class="input-box mt-3" *ngIf="returnPrScreen()">
+  <div class="row mt-3">
+    <div class="col">
+      <div class="p-fluid autoComplete">
+        <label class="">{{'newNC.step1.rejectionPoint.pr'| translate}}</label>
+        <p-autoComplete
+                [(ngModel)]="nonComplicanceService.autoCompletePrValue"
+                class="p-autocomplete"
+                [suggestions]="resultsPr"
+                (onSelect)="onSelectedPr()"
+                (ngModelChange)="onChange()"
+                (completeMethod)="searchPr($event)"
+                [style]="{ width: '100%' }"
+                [inputStyle]="{ width: '100%' }"
+                field="description"
+                [placeholder]="'newNC.step1.rejectionPoint.searchPlaceholder'| translate"
+        >
+          <ng-template let-brand pTemplate="item">
+            <div>
+              <div class="d-flex justify-content-between">
+                <div>
+                  <span class="auto-complete-label">{{'newNC.step1.partner.codeUpper'| translate}}</span><br />
+                  <span class="auto-complete-item">{{ brand.code }}</span>
+                </div>
+                <div>
+                  <span class="auto-complete-label">{{'newNC.step1.rejectionPoint.descriptionUpper'| translate}}</span><br />
+                  <span class="auto-complete-item">{{
+                    brand.description
+                    }}</span>
+                </div>
+                <div>
+                  <span class="auto-complete-label">{{'newNC.step1.rejectionPoint.revisionUpper'| translate}}</span><br />
+                  <span class="auto-complete-item">{{ brand.rev }}</span>
+                </div>
+              </div>
+            </div></ng-template
+          >
+        </p-autoComplete>
+      </div>
+    </div>
+    <div class="col att-button">
+      <div>
+<!--        <p class="p-0"><i class="pi pi-history"></i> {{'newNC.step1.lastUpdate'| translate}} {{ returnUpdateTime() }}</p>-->
+        <a      target="_blank"
+                href="ncs/import"
+                role="button"
+                class="btn btn-dark"
+        >
+          {{'newNC.step1.rejectionPoint.updatePr'| translate}}
+          <i class="pi pi-download" id="icon-button"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+  <label class="mb-2 mt-3">{{'global.fileInput.title2'| translate}} </label>
+  <div class="div-attachment">
+    <h1>{{'global.fileInput.subtitle'| translate}}</h1>
+    <div
+            class="white-background"
+            *ngIf="nonComplicanceService.fileControle.length == 0"
+    >
+      <input
+              type="file"
+              class="input-attachment"
+              (change)="onUpload($event, 'pontoControle')"
+              multiple
+      />
+      <i class="pi pi-cloud-upload"></i>
+      <p>
+        {{'global.fileInput.description'| translate}}
+      </p>
+    </div>
+    <div
+            class="white-background-files"
+            *ngIf="returnFiles('pontoControle').length != 0"
+    >
+      <button
+              type="button"
+              (click)="clearFileName('pontoControle')"
+              class="btn btn-light"
       >
         <i class="pi pi-replay"></i>
       </button>
